<resources>
    <string name="app_name">Finance Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hint_amount">0</string>
    <string name="outcome">OUTCOME</string>
    <string name="income">INCOME</string>
    <string name="cash">CASH</string>
    <string name="card">CARD</string>
    <string name="account_title">Account</string>
    <string name="category_title">Category</string>
    <string name="settings_currency_title">Currency</string>
    <string name="settings_currency_summary">Select one custom currency</string>
    <string name="settings_currency_key">currency</string>
    <string name="transaction_empty_amount_warning">Please fill in the amount.</string>
    <string name="msg_currency_error">Could not update currency rates, please try again.</string>
    <string name="zero_balance_default">0 USD</string>
    <string name="zero_balance_custom">0 RUB</string>
    <string name="close">Close</string>
    <string name="save">Save</string>

    <!---->
    <string name="new_income">new income</string>
    <string name="new_expense">new expense</string>
    <string name="new_operation_from_template">new operation from template</string>

    <!--add operation screen-->
    <string name="add_operation_screen_name">New operation</string>
    <string name="hint_enter_amount">amount</string>
    <string name="choose_wallet">choose wallet</string>
    <string name="repeat_text">Repeat in days: </string>
    <string name="is_periodical">Periodical operation</string>

    <!--periodical operations screen-->
    <string name="new_periodical_income">new periodical income</string>
    <string name="new_periodical_expense">new periodical expense</string>

    <!--my wallets screen-->
    <string name="default_value_text">Default value: </string>


</resources>
