<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rl_app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close"
                android:tint="@android:color/white" />

            <Button
                android:id="@+id/btn_outcome"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toRightOf="@+id/button_close"
                android:text="@string/outcome" />

            <Button
                android:id="@+id/btn_income"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toLeftOf="@+id/button_save"
                android:text="@string/income" />

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_ok"
                android:tint="@android:color/white" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:dropDownVerticalOffset="100dp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"/>

    <LinearLayout
        android:id="@+id/rl_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:paddingLeft="46dp"
        android:paddingRight="46dp">

        <ToggleButton
            android:id="@+id/btn_cash"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/cash"
            android:text="@string/cash"
            android:textOff="@string/cash"
            android:textOn="@string/cash" />

        <ToggleButton
            android:id="@+id/btn_card"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/card"
            android:text="@string/card"
            android:textOff="@string/card"
            android:textOn="@string/card" />

    </LinearLayout>

    <com.davidmiguel.numberkeyboard.NumberKeyboard xmlns:keyboard="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        keyboard:keyPadding="8dp"
        keyboard:keyboardType="decimal" />
</LinearLayout>
